@@ -45,12 +45,16 @@
 					<configuration>
 						<source>${java.version}</source>
 						<target>${java.version}</target>
+						<compilerArgs>--enable-preview</compilerArgs>
 					</configuration>
 				</plugin>
 				<plugin>
                 	<groupId>org.apache.maven.plugins</groupId>
                 	<artifactId>maven-surefire-plugin</artifactId>
                 	<version>2.22.2</version>
+                	<configuration>
+						<argLine>--enable-preview</argLine>
+					</configuration>
             	</plugin>
 			</plugins>
 		</pluginManagement>
